--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,94 @@
 body {
   background: papayawhip;
 }
+
+.container{
+  display:flex;
+  min-height:100vh;
+  flex-direction: column;
+  justify-content: space-between;
+ 
+  
+}
+
+.a{
+  background-color:yellow;
+
+}
+
+.b{
+  background-color:purple;
+
+
+}
+
+.c{
+  background-color:blue;
+}
+
+
+.d{
+background-color:green;
+}
+
+.e{
+background-color:orange;
+}
+
+.f{
+background-color:red;
+}
+
+.main{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-grow: 3;
+  justify-content: space-between;
+
+}
+
+.a{
+  flex-grow: 1;
+  min-height: 25vh;
+  margin: 0.25em;
+
+}
+
+.b{
+  flex-grow:4 ;
+  min-height: 65vh;
+  width: 100%;
+  margin: 0.25em;
+  
+  
+
+}
+
+.c, .d, .e{
+  
+  flex-grow: 1;
+  min-height: 25vh;
+  margin: 0.25em;
+ 
+  
+}
+
+.f{
+  flex-grow: 1;
+  min-height: 25vh;
+  margin: 0.25em;
+}
+
+@media(min-width:600px) {
+  .container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .a{
+     width:100%;
+     
+  }
+
+}
